[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Items/StaticTriggeredObjects/SwitchedOmniLight.gd" type="Script" id=1]
[ext_resource path="res://scenes/Items/StaticTriggeredObjects/1930sLightSwitch.png" type="Texture" id=2]
[ext_resource path="res://scenes/_common/GUI/sfx/click.ogg" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]

[node name="SwitchedOmniLight" type="OmniLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53771, 0 )
omni_range = 3.0
script = ExtResource( 1 )

[node name="LightSwitch" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.55923, -1.52748, 0 )

[node name="CollisionShape" type="CollisionShape" parent="LightSwitch"]
transform = Transform( 0.3577, 0, 0, 0, 0.3577, 0, 0, 0, 0.3577, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="LightSwitch"]
transform = Transform( 0.0673795, 0, 0, 0, -4.37114e-08, 1, 0, -0.0673795, -2.94525e-09, 0, 0, 0 )
texture = ExtResource( 2 )

[node name="ClickNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="LightSwitch" to="." method="_on_LightSwitch_body_entered"]
